--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -98,10 +98,10 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="login-guard.js"></script>
-  <script>
+ <script>
   document.getElementById("logoutBtn").addEventListener("click", () => {
-    // 🧹 مسح جميع الجلسات الخاصة بالدخول
-    sessionStorage.removeItem("loggedInAt");
+    // 🧹 مسح الجلسة الخاصة بلوحة التحكم فقط
+    sessionStorage.removeItem("loggedInAt_dashboard");
 
     // 🔄 التوجيه إلى الصفحة الرئيسية
     window.location.href = "index.html";
