--- a/public/passwords.html
+++ b/public/passwords.html
@@ -131,7 +131,7 @@ function renderPasswords(list) {
         <input type="password" value="${p.password}" class="form-control form-control-sm pw-field" readonly>
         <button class="btn btn-sm btn-link toggle-pw">👁</button>
       </td>
-      <td>${new Date(p.dateAdded).toLocaleString()}</td>
+ /*   <td>${new Date(p.dateAdded).toLocaleString()}</td> */
       <td>
         <button class="btn btn-warning btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
         <button class="btn btn-danger btn-sm" onclick="deletePassword('${p._id}')">🗑️ حذف</button>
