--- a/public/passwords.html
+++ b/public/passwords.html
@@ -8,34 +8,25 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
-    body { background-color: #f4f6f9; padding: 20px; font-family: 'Segoe UI', sans-serif; transition: background 0.3s, color 0.3s; font-size:16px; }
+    body { background-color: #f4f6f9; font-family: 'Segoe UI', sans-serif; transition: background 0.3s, color 0.3s; font-size:16px; }
     .password-card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); margin-bottom: 15px; }
     table td, table th { vertical-align: middle; white-space: nowrap; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; }
-    /* عمود الرقم Sticky */
     th.sticky-col, td.sticky-col { position: sticky; right: 0; background: #fff; z-index: 2; }
     thead th.sticky-col { background: #212529; color: #fff; z-index: 3; }
-    /* Dark Mode */
     body.dark-mode { background-color: #121212; color: #eaeaea; }
     body.dark-mode .password-card, body.dark-mode table { background: #1e1e1e; color: #ddd; }
     body.dark-mode .table-dark { background-color: #333 !important; }
     body.dark-mode .modal-content { background: #1e1e1e; color: #fff; }
     body.dark-mode .btn-close { filter: invert(1); }
     body.dark-mode td.sticky-col { background: #1e1e1e; }
-    /* شاشة التحميل */
     #loadingOverlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.5);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      z-index: 2000;
-      color: #fff;
-      font-size: 1.2rem;
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5); display: none;
+      align-items: center; justify-content: center; flex-direction: column;
+      z-index: 2000; color: #fff; font-size: 1.2rem;
     }
+    #pageContent { display: none; }
   </style>
 </head>
 <body>
@@ -46,106 +37,96 @@
   <p class="mt-3">⏳ جاري التحميل...</p>
 </div>
 
-<div class="d-flex justify-content-between mb-3">
-  <div>
-    <button id="logoutBtn" class="btn btn-danger me-2" data-bs-toggle="tooltip" title="تسجيل الخروج"><i class="bi bi-box-arrow-right"></i></button>
-    <button id="dashboardBtn" class="btn btn-secondary" data-bs-toggle="tooltip" title="العودة للوحة التحكم"><i class="bi bi-speedometer2"></i></button>
-  </div>
-  <div>
-    <button id="themeToggle" class="btn btn-outline-dark" data-bs-toggle="tooltip" title="الوضع الليلي/النهاري"><i class="bi bi-moon-stars-fill"></i></button>
-  </div>
-</div>
+<!-- ✅ محتوى الصفحة -->
+<div id="pageContent">
 
-<div class="container">
-  <h2 class="mb-4">🔑 إدارة كلمات المرور</h2>
+  <div class="d-flex justify-content-between mb-3">
+    <div>
+      <button id="logoutBtn" class="btn btn-danger me-2" data-bs-toggle="tooltip" title="تسجيل الخروج"><i class="bi bi-box-arrow-right"></i></button>
+      <button id="dashboardBtn" class="btn btn-secondary" data-bs-toggle="tooltip" title="العودة للوحة التحكم"><i class="bi bi-speedometer2"></i></button>
+    </div>
+    <div>
+      <button id="themeToggle" class="btn btn-outline-dark" data-bs-toggle="tooltip" title="الوضع الليلي/النهاري"><i class="bi bi-moon-stars-fill"></i></button>
+    </div>
+  </div>
 
-  <!-- نموذج الإضافة -->
-  <div class="password-card">
-    <form id="addPasswordForm" class="row g-3">
-      <div class="col-md-4">
-        <input type="text" class="form-control" id="section" placeholder="اسم القسم أو الجزء" required data-bs-toggle="tooltip" title="أدخل اسم القسم">
-      </div>
-      <div class="col-md-4">
-        <div class="input-group">
-          <input type="password" class="form-control" id="password" placeholder="كلمة المرور" required data-bs-toggle="tooltip" title="أدخل كلمة المرور">
-          <button type="button" class="btn btn-outline-secondary" id="togglePassword" data-bs-toggle="tooltip" title="إظهار/إخفاء كلمة المرور"><i class="bi bi-eye"></i></button>
+  <div class="container">
+    <h2 class="mb-4">🔑 إدارة كلمات المرور</h2>
+
+    <!-- نموذج الإضافة -->
+    <div class="password-card">
+      <form id="addPasswordForm" class="row g-3">
+        <div class="col-md-4">
+          <input type="text" class="form-control" id="section" placeholder="اسم القسم أو الجزء" required data-bs-toggle="tooltip" title="أدخل اسم القسم">
         </div>
-      </div>
-      <div class="col-md-2">
-        <button type="submit" class="btn btn-success w-100" data-bs-toggle="tooltip" title="إضافة كلمة مرور جديدة">➕ إضافة</button>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control" id="searchBox" placeholder="🔍 بحث..." data-bs-toggle="tooltip" title="ابحث عن كلمة مرور">
-      </div>
-    </form>
-  </div>
+        <div class="col-md-4">
+          <div class="input-group">
+            <input type="password" class="form-control" id="password" placeholder="كلمة المرور" required data-bs-toggle="tooltip" title="أدخل كلمة المرور">
+            <button type="button" class="btn btn-outline-secondary" id="togglePassword" data-bs-toggle="tooltip" title="إظهار/إخفاء كلمة المرور"><i class="bi bi-eye"></i></button>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <button type="submit" class="btn btn-success w-100" data-bs-toggle="tooltip" title="إضافة كلمة مرور جديدة">➕ إضافة</button>
+        </div>
+        <div class="col-md-2">
+          <input type="text" class="form-control" id="searchBox" placeholder="🔍 بحث..." data-bs-toggle="tooltip" title="ابحث عن كلمة مرور">
+        </div>
+      </form>
+    </div>
 
-  <!-- الجدول -->
-  <div class="table-responsive">
-    <table class="table table-bordered table-striped mt-4">
-      <thead class="table-dark">
-        <tr>
-          <th class="sticky-col" style="width:50px">#</th>
-          <th>القسم</th>
-          <th>كلمة المرور</th>
-          <th>إجراءات</th>
-        </tr>
-      </thead>
-      <tbody id="passwordsTable">
-        <tr><td colspan="4" class="text-center text-muted">🚫 لا توجد كلمات مرور مسجلة</td></tr>
-      </tbody>
-    </table>
+    <!-- الجدول -->
+    <div class="table-responsive">
+      <table class="table table-bordered table-striped mt-4">
+        <thead class="table-dark">
+          <tr>
+            <th class="sticky-col" style="width:50px">#</th>
+            <th>القسم</th>
+            <th>كلمة المرور</th>
+            <th>إجراءات</th>
+          </tr>
+        </thead>
+        <tbody id="passwordsTable">
+          <tr><td colspan="4" class="text-center text-muted">🚫 لا توجد كلمات مرور مسجلة</td></tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 
 <!-- نافذة تعديل -->
 <div class="modal fade" id="editModal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <form id="editPasswordForm">
-        <div class="modal-header">
-          <h5 class="modal-title">✏️ تعديل كلمة المرور</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          <input type="hidden" id="editId">
-          <div class="mb-3">
-            <label class="form-label">اسم القسم</label>
-            <input type="text" class="form-control" id="editSection" required>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">كلمة المرور</label>
-            <input type="text" class="form-control" id="editPassword" required>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">💾 حفظ</button>
-        </div>
-      </form>
-    </div>
-  </div>
+  <div class="modal-dialog"><div class="modal-content">
+    <form id="editPasswordForm">
+      <div class="modal-header"><h5 class="modal-title">✏️ تعديل كلمة المرور</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <input type="hidden" id="editId">
+        <div class="mb-3"><label class="form-label">اسم القسم</label><input type="text" class="form-control" id="editSection" required></div>
+        <div class="mb-3"><label class="form-label">كلمة المرور</label><input type="text" class="form-control" id="editPassword" required></div>
+      </div>
+      <div class="modal-footer"><button type="submit" class="btn btn-primary">💾 حفظ</button></div>
+    </form>
+  </div></div>
 </div>
 
 <!-- نافذة تأكيد الحذف -->
 <div class="modal fade" id="confirmDeleteModal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header bg-danger text-white">
-        <h5 class="modal-title">تأكيد الحذف</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">هل أنت متأكد أنك تريد حذف هذه الكلمة السرية؟</div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
-        <button type="button" class="btn btn-danger" id="confirmDeleteBtn">🗑️ حذف</button>
-      </div>
+  <div class="modal-dialog modal-dialog-centered"><div class="modal-content">
+    <div class="modal-header bg-danger text-white"><h5 class="modal-title">تأكيد الحذف</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
     </div>
-  </div>
+    <div class="modal-body">هل أنت متأكد أنك تريد حذف هذه الكلمة السرية؟</div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
+      <button type="button" class="btn btn-danger" id="confirmDeleteBtn">🗑️ حذف</button>
+    </div>
+  </div></div>
 </div>
 
 <!-- Toast -->
 <div class="toast-container" id="toastContainer"></div>
-<!-- ✅ نافذة تسجيل الدخول -->
+<!-- نافذة تسجيل الدخول -->
 <div id="loginModalContainer"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -201,13 +182,13 @@ function renderPasswords(list) {
       <td>
         <div class="d-flex align-items-center">
           <input type="password" value="${p.password}" class="form-control form-control-sm me-2 pw-field" readonly>
-          <button class="btn btn-sm btn-outline-secondary toggle-pw" data-bs-toggle="tooltip" title="إظهار كلمة المرور"><i class="bi bi-eye"></i></button>
-          <button class="btn btn-sm btn-outline-success ms-1 copy-pw" data-bs-toggle="tooltip" title="نسخ كلمة المرور"><i class="bi bi-clipboard"></i></button>
+          <button class="btn btn-sm btn-outline-secondary toggle-pw"><i class="bi bi-eye"></i></button>
+          <button class="btn btn-sm btn-outline-success ms-1 copy-pw"><i class="bi bi-clipboard"></i></button>
         </div>
       </td>
       <td>
-        <button class="btn btn-primary btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')" data-bs-toggle="tooltip" title="تعديل">✏️ تعديل</button>
-        <button class="btn btn-danger btn-sm" onclick="confirmDelete('${p._id}')" data-bs-toggle="tooltip" title="حذف">🗑️ حذف</button>
+        <button class="btn btn-primary btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
+        <button class="btn btn-danger btn-sm" onclick="confirmDelete('${p._id}')">🗑️ حذف</button>
       </td>`;
     table.appendChild(tr);
   });
@@ -279,7 +260,6 @@ document.getElementById('togglePassword').addEventListener('click', () => {
 document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
 document.getElementById("logoutBtn").addEventListener("click",()=>{sessionStorage.removeItem("loggedInAt_passwords");showToast("✅ تم تسجيل الخروج بنجاح","success");setTimeout(()=>{window.location.href="index.html";},1500);});
 document.getElementById("themeToggle").addEventListener("click",()=>{document.body.classList.toggle("dark-mode");const icon=document.querySelector("#themeToggle i");if(document.body.classList.contains("dark-mode")){icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");}else{icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");}});
-document.addEventListener("DOMContentLoaded", loadPasswords);
 </script>
 </body>
 </html>
