--- a/public/add.html
+++ b/public/add.html
@@ -15,7 +15,11 @@
     iframe,video { width:100%; height:360px; border:none; border-radius:8px; }
     #descriptionEditor { height:120px; }
     #toastContainer { position:fixed; top:20px; left:50%; transform:translateX(-50%); z-index:2000; }
-    #loadingOverlay { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,.5); display:none; align-items:center; justify-content:center; flex-direction:column; z-index:3000; color:#fff; font-size:1.2rem; }
+    #loadingOverlay {
+      position:fixed; top:0; left:0; width:100%; height:100%;
+      background:rgba(0,0,0,.5); display:flex; align-items:center; justify-content:center; flex-direction:column;
+      z-index:3000; color:#fff; font-size:1.2rem;
+    }
     #pageContent { display:none; }
     /* الوضع الليلي */
     body.dark-mode { background-color:#121212; color:#eaeaea; }
@@ -38,7 +42,7 @@
 <!-- شاشة التحميل -->
 <div id="loadingOverlay">
   <div class="spinner-border text-light" style="width:3rem;height:3rem"></div>
-  <p class="mt-3">جاري التحميل...⏳</p>
+  <p class="mt-3" id="loadingText">جاري التحميل...⏳</p>
 </div>
 
 <div id="pageContent">
@@ -142,6 +146,9 @@ function showToast(message,type="success"){
   setTimeout(()=>toast.remove(),3000);
 }
 
+// ✅ إخفاء شاشة التحميل بعد التحميل
+window.addEventListener("load",()=>{ document.getElementById("loadingOverlay").style.display="none"; });
+
 // ✅ Dashboard
 document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
 
@@ -213,13 +220,26 @@ document.getElementById("confirmDeleteBtn").addEventListener("click",async()=>{
   bootstrap.Modal.getInstance(document.getElementById("confirmDeleteModal")).hide(); departmentToDelete=null;
 });
 
-// ✅ إضافة الفيديو
+// ✅ إضافة الفيديو مع Overlay
 document.getElementById('videoForm').addEventListener('submit',async e=>{
   e.preventDefault();
+  document.getElementById("loadingText").textContent="جاري الحفظ...⏳";
+  document.getElementById("loadingOverlay").style.display="flex";
+
   const title=document.getElementById('title').value, url=document.getElementById('url').value, description=quill.root.innerHTML, department=document.getElementById('department').value;
-  const res=await fetch(`${API_BASE}/api/videos`,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({title,link:url,url,description,department})});
-  if(res.ok){document.getElementById('confirmation').textContent='✅ تم إضافة الفيديو بنجاح'; document.getElementById('confirmation').classList.remove('d-none'); document.getElementById('videoForm').reset(); quill.setContents([]); document.getElementById('preview').innerHTML=''; loadDepartments(); showToast("✅ تم إضافة الفيديو بنجاح","success");}
-  else showToast("❌ حدث خطأ أثناء الإضافة","danger");
+  try {
+    const res=await fetch(`${API_BASE}/api/videos`,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({title,link:url,url,description,department})});
+    if(res.ok){
+      document.getElementById('confirmation').textContent='✅ تم إضافة الفيديو بنجاح';
+      document.getElementById('confirmation').classList.remove('d-none');
+      document.getElementById('videoForm').reset(); quill.setContents([]); document.getElementById('preview').innerHTML='';
+      loadDepartments(); showToast("✅ تم إضافة الفيديو بنجاح","success");
+    } else showToast("❌ حدث خطأ أثناء الإضافة","danger");
+  } catch { showToast("❌ فشل الاتصال بالخادم","danger"); }
+  finally {
+    document.getElementById("loadingOverlay").style.display="none";
+    document.getElementById("loadingText").textContent="جاري التحميل...⏳";
+  }
 });
 
 loadDepartments();
